include_directories(${CMAKE_CURRENT_BINARY_DIR})
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)
BISON_TARGET(EeyoreParser Eeyore.y ${CMAKE_CURRENT_BINARY_DIR}/Eeyore.tab.cpp)
FLEX_TARGET(EeyoreLexer Eeyore.l ${CMAKE_CURRENT_BINARY_DIR}/Eeyore.yy.cpp)
ADD_FLEX_BISON_DEPENDENCY(EeyoreLexer EeyoreParser)
add_compile_options(-m32 -std=c++11 -O2)
set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -m32)
ADD_EXECUTABLE(Eeyore ${BISON_EeyoreParser_OUTPUT_SOURCE} ${FLEX_EeyoreLexer_OUTPUTS} Eeyore.cpp Eeyore_execute.cpp Eeyore_debug.cpp typedef.h)
