include_directories(${CMAKE_CURRENT_BINARY_DIR})
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)
BISON_TARGET(tiggerParser tigger.y ${CMAKE_CURRENT_BINARY_DIR}/tigger.tab.cpp)
FLEX_TARGET(tiggerLexer tigger.l ${CMAKE_CURRENT_BINARY_DIR}/tigger.yy.cpp)
ADD_FLEX_BISON_DEPENDENCY(tiggerLexer tiggerParser)
add_compile_options(-m32)
set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -m32)
ADD_EXECUTABLE(Tigger ${BISON_tiggerParser_OUTPUT_SOURCE} ${FLEX_tiggerLexer_OUTPUTS} tigger.cpp yaccTypes.cpp run.cpp dbg.cpp)
